--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
 coloredlogs==15.0.1
+cuda-bindings==12.9.4
+cuda-pathfinder==1.3.3
 dataclasses-json==0.6.7
 Deprecated==1.3.1
 dirtyjson==1.0.8
@@ -42,6 +44,7 @@ Jinja2==3.1.6
 joblib==1.5.3
 llama-index-core==0.14.13
 llama-index-embeddings-fastembed==0.5.0
+llama-index-embeddings-huggingface==0.6.1
 llama-index-embeddings-ollama==0.8.6
 llama-index-instrumentation==0.4.2
 llama-index-llms-ollama==0.9.1
@@ -59,6 +62,21 @@ nest-asyncio==1.6.0
 networkx==3.6.1
 nltk==3.9.2
 numpy==2.4.2
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.4.5
+nvidia-nvtx-cu12==12.8.90
 ollama==0.6.1
 onnxruntime==1.23.2
 openpyxl==3.1.5
@@ -86,6 +104,10 @@ PyYAML==6.0.3
 qdrant-client==1.16.2
 regex==2026.1.15
 requests==2.32.5
+safetensors==0.7.0
+scikit-learn==1.8.0
+scipy==1.17.0
+sentence-transformers==5.2.2
 setuptools==81.0.0
 shellingham==1.5.4
 six==1.17.0
@@ -93,9 +115,13 @@ SQLAlchemy==2.0.46
 starlette==0.52.1
 sympy==1.14.0
 tenacity==9.1.3
+threadpoolctl==3.6.0
 tiktoken==0.12.0
 tokenizers==0.22.2
+torch==2.10.0
 tqdm==4.67.3
+transformers==5.1.0
+triton==3.6.0
 typer-slim==0.21.1
 typing-inspect==0.9.0
 typing-inspection==0.4.2
